fixing pixelated header on iphones

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -10,7 +10,7 @@
 @media (max-width: 1000px) {
     // HEADER
     header {
-        background-attachment: fixed;
+        background-attachment: scroll;
             h1 {
                 font-size: 7.2rem;
             }
